exports[`creates single 5xx alarm (enabled) with expected defaults 1`] = `
{
  "Resources": {
    "ServiceAlarmsAlbTargets5xxAlarm55A1710E": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
        "AlarmDescription": "Load balancer received too many 5XX responses from target(s) in ECS service 'my-service'.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "LoadBalancer",
            "Value": "app/my-alb/456",
          },
          {
            "Name": "TargetGroup",
            "Value": "targetgroup/abc/123",
          },
        ],
        "EvaluationPeriods": 3,
        "MetricName": "HTTPCode_Target_5XX_Count",
        "Namespace": "AWS/ApplicationELB",
        "OKActions": [
          {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 10,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ServiceAlarmsAlbTargetsSingle5xxAlarmDEEF5967": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
        "AlarmDescription": "Load balancer received a 5XX response from target(s) in ECS service 'my-service'.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "LoadBalancer",
            "Value": "app/my-alb/456",
          },
          {
            "Name": "TargetGroup",
            "Value": "targetgroup/abc/123",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "HTTPCode_Target_5XX_Count",
        "Namespace": "AWS/ApplicationELB",
        "OKActions": [
          {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ServiceAlarmsConnectionAlarm1F083C01": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmDescription": "Load balancer is failing to connect to target(s) in ECS service 'my-service'.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "LoadBalancer",
            "Value": "app/my-alb/456",
          },
          {
            "Name": "TargetGroup",
            "Value": "targetgroup/abc/123",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "TargetConnectionErrorCount",
        "Namespace": "AWS/ApplicationELB",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ServiceAlarmsHealthAlarm888BAAB5": {
      "Properties": {
        "AlarmDescription": "There are no healthy target(s) in ECS service 'my-service'.",
        "ComparisonOperator": "LessThanThreshold",
        "Dimensions": [
          {
            "Name": "LoadBalancer",
            "Value": "app/my-alb/456",
          },
          {
            "Name": "TargetGroup",
            "Value": "targetgroup/abc/123",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "HealthyHostCount",
        "Namespace": "AWS/ApplicationELB",
        "Period": 60,
        "Statistic": "Minimum",
        "Threshold": 1,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ServiceAlarmsTargetHealthAlarm18599060": {
      "Properties": {
        "AlarmActions": [
          {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
        "AlarmDescription": "The load balancer is either receiving bad health checks from or is unable to connect to target(s) in ECS service 'my-service'",
        "AlarmName": "StackServiceAlarmsTargetHealthAlarm30873D46",
        "AlarmRule": {
          "Fn::Join": [
            "",
            [
              "(ALARM("",
              {
                "Fn::GetAtt": [
                  "ServiceAlarmsConnectionAlarm1F083C01",
                  "Arn",
                ],
              },
              "") OR ALARM("",
              {
                "Fn::GetAtt": [
                  "ServiceAlarmsHealthAlarm888BAAB5",
                  "Arn",
                ],
              },
              ""))",
            ],
          ],
        },
        "OKActions": [
          {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
      },
      "Type": "AWS::CloudWatch::CompositeAlarm",
    },
    "ServiceAlarmsTargetResponseTimeAlarmA0DC0898": {
      "Properties": {
        "AlarmActions": [
          {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
        "AlarmDescription": "5% of responses from ECS service 'my-service' are taking longer than the expected duration of 1 s.",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": [
          {
            "Name": "LoadBalancer",
            "Value": "app/my-alb/456",
          },
          {
            "Name": "TargetGroup",
            "Value": "targetgroup/abc/123",
          },
        ],
        "EvaluationPeriods": 1,
        "ExtendedStatistic": "p95",
        "MetricName": "TargetResponseTime",
        "Namespace": "AWS/ApplicationELB",
        "OKActions": [
          {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
        "Period": 300,
        "Threshold": 1,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
}
`;

exports[`does not create single 5xx alarm when disabled 1`] = `
{
  "Resources": {
    "ServiceAlarms2AlbTargets5xxAlarm7FA5A413": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::ImportValue": "SupportStack2:ExportsOutputRefTopic269377B7501C5D6AF",
          },
        ],
        "AlarmDescription": "Load balancer received too many 5XX responses from target(s) in ECS service 'my-service-2'.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "LoadBalancer",
            "Value": "app/my-alb/789",
          },
          {
            "Name": "TargetGroup",
            "Value": "targetgroup/abc/456",
          },
        ],
        "EvaluationPeriods": 3,
        "MetricName": "HTTPCode_Target_5XX_Count",
        "Namespace": "AWS/ApplicationELB",
        "OKActions": [
          {
            "Fn::ImportValue": "SupportStack2:ExportsOutputRefTopic269377B7501C5D6AF",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 10,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ServiceAlarms2ConnectionAlarm0918FCD4": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmDescription": "Load balancer is failing to connect to target(s) in ECS service 'my-service-2'.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "LoadBalancer",
            "Value": "app/my-alb/789",
          },
          {
            "Name": "TargetGroup",
            "Value": "targetgroup/abc/456",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "TargetConnectionErrorCount",
        "Namespace": "AWS/ApplicationELB",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ServiceAlarms2HealthAlarmB4C2F55E": {
      "Properties": {
        "AlarmDescription": "There are no healthy target(s) in ECS service 'my-service-2'.",
        "ComparisonOperator": "LessThanThreshold",
        "Dimensions": [
          {
            "Name": "LoadBalancer",
            "Value": "app/my-alb/789",
          },
          {
            "Name": "TargetGroup",
            "Value": "targetgroup/abc/456",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "HealthyHostCount",
        "Namespace": "AWS/ApplicationELB",
        "Period": 60,
        "Statistic": "Minimum",
        "Threshold": 1,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ServiceAlarms2TargetHealthAlarm9164518C": {
      "Properties": {
        "AlarmActions": [
          {
            "Fn::ImportValue": "SupportStack2:ExportsOutputRefTopic269377B7501C5D6AF",
          },
        ],
        "AlarmDescription": "The load balancer is either receiving bad health checks from or is unable to connect to target(s) in ECS service 'my-service-2'",
        "AlarmName": "Stack2ServiceAlarms2TargetHealthAlarmE2E2B8E1",
        "AlarmRule": {
          "Fn::Join": [
            "",
            [
              "(ALARM("",
              {
                "Fn::GetAtt": [
                  "ServiceAlarms2ConnectionAlarm0918FCD4",
                  "Arn",
                ],
              },
              "") OR ALARM("",
              {
                "Fn::GetAtt": [
                  "ServiceAlarms2HealthAlarmB4C2F55E",
                  "Arn",
                ],
              },
              ""))",
            ],
          ],
        },
        "OKActions": [
          {
            "Fn::ImportValue": "SupportStack2:ExportsOutputRefTopic269377B7501C5D6AF",
          },
        ],
      },
      "Type": "AWS::CloudWatch::CompositeAlarm",
    },
    "ServiceAlarms2TargetResponseTimeAlarm4652CF1A": {
      "Properties": {
        "AlarmActions": [
          {
            "Fn::ImportValue": "SupportStack2:ExportsOutputRefTopic269377B7501C5D6AF",
          },
        ],
        "AlarmDescription": "5% of responses from ECS service 'my-service-2' are taking longer than the expected duration of 1 s.",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": [
          {
            "Name": "LoadBalancer",
            "Value": "app/my-alb/789",
          },
          {
            "Name": "TargetGroup",
            "Value": "targetgroup/abc/456",
          },
        ],
        "EvaluationPeriods": 1,
        "ExtendedStatistic": "p95",
        "MetricName": "TargetResponseTime",
        "Namespace": "AWS/ApplicationELB",
        "OKActions": [
          {
            "Fn::ImportValue": "SupportStack2:ExportsOutputRefTopic269377B7501C5D6AF",
          },
        ],
        "Period": 300,
        "Threshold": 1,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
}
`;
